# viennamesh-dev

./: CMakeLists.txt
examples/tutorials/: CMakeLists.txt  cgal_mesh_simplification.cpp  cgal_statistic_sweep.cpp  cgal_statistics.cpp  color_refinement.cpp  coloring.cpp  mesh_statistics.cpp  parpartmesh.cpp  pragmatic_metis_partitioner.cpp
include/viennameshpp/: common.hpp
plugins/: CMakeLists.txt
plugins/CGAL/: CMakeLists.txt  cgal_mesh.cpp  cgal_mesh_simplification.cpp  cgal_statistic.cpp  cgal_statistic.hpp  cgal_statistic_funktions.cpp  plugin.cpp
plugins/color_based_refinement/: CMakeLists.txt  color_refinement.cpp  color_refinement.hpp  mesh_partitions.hpp  mesh_partitions_refinement.hpp  outbox.hpp  plugin.cpp  pragmatic_mesh.cpp  pragmatic_mesh.hpp
plugins/io/: mesh_reader.cpp  mesh_writer.cpp
plugins/pragmatic/: CMakeLists.txt  dummy.hpp  grouped_partitions.hpp  grouped_partitions_refinement.hpp  grouped_partitions_smooth.hpp  plugin.cpp  pragmatic_mesh.hpp  pragmatic_metis_partitioning.cpp  pragmatic_refine_multi_region.cpp  pragmatic_refine_multi_region.hpp
plugins/pragmatic/headers/: Edge.h  Mesh.h  MetricField.h
plugins/statistics/: make_statistic.cpp  statistic.hpp
plugins/viennagrid/: CMakeLists.txt  parallel_coloring.cpp  parallel_coloring.hpp  plugin.cpp
